// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview should render correctly with 5 or more actors 1`] = `
Array [
  <div
    className="movie-rating"
  >
    <div
      className="movie-rating__score"
    >
      8,9
    </div>
    <p
      className="movie-rating__meta"
    >
      <span
        className="movie-rating__level"
      >
        Very good
      </span>
      <span
        className="movie-rating__count"
      >
        31337 ratings
      </span>
    </p>
  </div>,
  <div
    className="movie-card__text"
  >
    description text
    <p
      className="movie-card__director"
    >
      <strong>
        Director: Arthur Pirozhkov
      </strong>
    </p>
    <p
      className="movie-card__starring"
    >
      <strong>
        Starring: Belka, Strelka, Monkey, Rat and other
      </strong>
    </p>
  </div>,
]
`;

exports[`Overview should render correctly with less than 5 actors 1`] = `
Array [
  <div
    className="movie-rating"
  >
    <div
      className="movie-rating__score"
    >
      8,9
    </div>
    <p
      className="movie-rating__meta"
    >
      <span
        className="movie-rating__level"
      >
        Very good
      </span>
      <span
        className="movie-rating__count"
      >
        31337 ratings
      </span>
    </p>
  </div>,
  <div
    className="movie-card__text"
  >
    description text
    <p
      className="movie-card__director"
    >
      <strong>
        Director: Arthur Pirozhkov
      </strong>
    </p>
    <p
      className="movie-card__starring"
    >
      <strong>
        Starring: Belka, Strelka, Monkey, Rat
      </strong>
    </p>
  </div>,
]
`;
